--- a/portfolio.html
+++ b/portfolio.html
@@ -5,47 +5,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      html{scroll-behavior: smooth;}
-      * {margin: 0;
-          padding: 0;
-          box-sizing: border-box;}
+      html {
+        scroll-behavior: smooth;
+      }
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
 
-      body {background-color: rgba(255, 255, 255, 0.286);}
+      body {
+        background-color: rgba(255, 255, 255, 0.286);
+      }
 
-      header{background-color: rgba(150, 135, 135, 0);
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          padding: 16px 32px; }
+      header {
+        background-color: rgba(175, 174, 174, 0.338);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 16px 32px;
+      }
+      header h1 {
+        color: rgb(53, 12, 72);
+      }
 
-      .left-header {color: white;
-          font-weight: bold;
-       font-size: 1rem;}
-       ul {display: flex;
-          gap: 16px;
-          font-size: small;
-     color: rgb(30, 10, 44);}
-       li {list-style: none;}
+      .left-header {
+        color: white;
+        font-weight: bold;
+        font-size: 3rem;
+      }
+      ul {
+        display: flex;
+        gap: 1rem;
+        font-size: 1, 5rem;
+        color: rgb(30, 10, 44);
+      }
+      li {
+        list-style: none;
+      }
 
+      .titulo1 {
+        color: rgb(53, 12, 72);
+        font-size: 3rem;
+      }
+      .titulo2 {
+        color: rgb(0, 0, 0);
+        font-size: 2.5rem;
+      }
 
-      h1 {font-size: 2rem; 
-        color : rgba(53, 24, 75, 0.872);
-    }
+      main {
+        background-color: rgba(175, 174, 174, 0.338);
+        display: flex;
+        flex-direction: column;
+        align-items: first baseline;
+        height: 70%;
+        border: 100% color(black);
+      }
 
-      main{background-color: rgba(175, 174, 174, 0.338);
-          display: flex;
-          flex-direction: column;
-          align-items:first baseline;
-          height: 70%;}
+      div {
+        text-align: center;
+        padding: 5rem 50rem;
+        border-radius: 1rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center gap 16rem;
+      }
 
-      div {text-align: center;
-          padding: 5px 425px;
-          border-radius: 1rem;
-          display: flex ;
-          flex-direction:column;
-          align-items:center
-          gap 16px;}
-          p{color: rgba(0, 0, 0, 0.872);}
+      p {
+        color: rgba(0, 0, 0, 0.872);
+      }
+
+      .html {
+        width: 100%;
+        height: 100%;
+      }
     </style>
   </head>
   <body>
@@ -60,8 +93,11 @@
     </header>
     <main>
       <div>
-        <h1 id="ola">Ola mundo</h1>
-        <p>meu nome é italo</p>
+        <h1 class="titulo1">Ola mundo</h1>
+        <p class="titulo2">meu nome é italo</p>
+      </div>
+
+      <div><img src="img/img/01.webp" alt="html5" class="html" /> 
       </div>
     </main>
   </body>
